Upgrade research assistant to V3
